--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,6 @@
 .color-primary-4 { color: #194E6B }
 
 .content {
-    max-width: 90%;
     font-size: 1.6rem;
     margin: 0 auto;
     padding-top: 5%;
@@ -15,6 +14,10 @@
 li {
     padding-top: 1%;
     padding-bottom: 1%;
+}
+.no-style {
+    text-decoration: none !important;
+    color: #222 !important;
 }
 a {
     text-decoration: none;
@@ -32,3 +35,10 @@ a {
         padding-top: 2%;
     }
 }
+
+.nav-table{
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
