--- a/templates/default.html
+++ b/templates/default.html
@@ -15,7 +15,7 @@
     <body>
         <div class="content">
             <div class="row">
-                <div class="two columns">
+                <div class="two columns side-nav">
                     <a href="/" class="no-style"><h4>Avi Press</h4></a>
                     <table class="nav-table">
                         <tbody class="nav-table">
